--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "crypto-js": "^4.2.0",
     "face-api.js": "^0.22.2",
     "firebase": "^11.0.2",
     "next": "15.0.3",
