--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "face-api.js": "^0.22.2",
     "firebase": "^11.0.2",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-scripts": "^5.0.1"
   },
