--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "crypto-js": "^4.2.0",
     "face-api.js": "^0.22.2",
     "firebase": "^11.0.2",
+    "framer-motion": "^11.15.0",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.3.0",
     "react-scripts": "^5.0.1"
   },
